@@ -365,20 +365,20 @@ public class DamageFunction {
 					DamageMultiplier.Grenades),
 
 			new DamageRow(ActiveSkill.FoK, Rune.None, 6.2, true,
-					Integer.MAX_VALUE, 1, 20, DamageType.Physical),
+					Integer.MAX_VALUE, 1, 20, DamageType.Physical, DamageMultiplier.LGF),
 			new DamageRow(ActiveSkill.FoK, Rune.Pinpoint_Accuracy, 16.0, true,
-					Integer.MAX_VALUE, 1, 20, DamageType.Lightning),
+					Integer.MAX_VALUE, 1, 20, DamageType.Lightning, DamageMultiplier.LGF),
 			new DamageRow(ActiveSkill.FoK, Rune.Bladed_Armor, 6.2, true,
-					Integer.MAX_VALUE, 1, 20, DamageType.Physical),
+					Integer.MAX_VALUE, 1, 20, DamageType.Physical, DamageMultiplier.LGF),
 			new DamageRow(ActiveSkill.FoK, Rune.Knives_Expert, 6.2, true,
-					Integer.MAX_VALUE, 1, 20, DamageType.Physical),
+					Integer.MAX_VALUE, 1, 20, DamageType.Physical, DamageMultiplier.LGF),
 			new DamageRow(ActiveSkill.FoK, Rune.Fan_of_Daggers, 6.2, true,
-					Integer.MAX_VALUE, 1, 20, DamageType.Fire),
+					Integer.MAX_VALUE, 1, 20, DamageType.Fire, DamageMultiplier.LGF),
 			new DamageRow(ActiveSkill.FoK, Rune.Assassins_Knives, 6.2, true,
 					Integer.MAX_VALUE, 1, 20, "Short Range",
-					DamageType.Physical),
+					DamageType.Physical, DamageMultiplier.LGF),
 			new DamageRow(ActiveSkill.FoK, Rune.Assassins_Knives, 6.2, true, 4,
-					1, Integer.MAX_VALUE, "Long Range", DamageType.Physical),
+					1, Integer.MAX_VALUE, "Long Range", DamageType.Physical, DamageMultiplier.LGF),
 
 			new DamageRow(ActiveSkill.Vengeance, Rune.None, 0.6, true, 3,
 					"Side Guns", DamageType.Physical),
